--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
     "docx-preview": "^0.3.7",
+    "gh-pages": "^6.3.0",
     "mammoth": "^1.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
