--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "ag-psd": "^28.4.1",
     "docx-preview": "^0.3.7",
+    "file-saver": "^2.0.5",
     "gh-pages": "^6.3.0",
+    "jszip": "^3.10.1",
     "mammoth": "^1.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
